test/date/SPtests/RFC822/valid/39.php
<?php

$date = 'Fri, 05 Nov 94 13:15:30 +0000';
$expected = 784041330;

?>