test/date/SPtests/RFC822/invalid/mismatch_name_of_day.php
<?php

// Mismatch name of day

$date = 'Mon, 05 Nov 94 13:15:30 GMT';
$expected = 784041330;

?>